add JDK 8 compatibility