@@ -7,6 +7,7 @@ import com.fasterxml.jackson.databind.JsonDeserializer;
 import io.github.singlerr.vrmcore.BlendShapeGroup;
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class BlendShapeGroupDeserializer extends JsonDeserializer<List<BlendShapeGroup>> {
   @Override
@@ -15,6 +16,6 @@ public final class BlendShapeGroupDeserializer extends JsonDeserializer<List<Ble
     List<BlendShapeGroupImpl> groups =
         p.readValueAs(new TypeReference<List<BlendShapeGroupImpl>>() {
         });
-    return groups.stream().map(g -> (BlendShapeGroup) g).toList();
+    return groups.stream().map(g -> (BlendShapeGroup) g).collect(Collectors.toList());
   }
 }
