@@ -8,6 +8,7 @@ import com.fasterxml.jackson.databind.JsonDeserializer;
 import io.github.singlerr.vrmcore.HumanBone;
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class HumanBoneDeserializer extends JsonDeserializer<List<HumanBone>> {
   @Override
@@ -16,6 +17,6 @@ public final class HumanBoneDeserializer extends JsonDeserializer<List<HumanBone
     List<HumanBoneImpl> groups =
         p.readValueAs(new TypeReference<List<HumanBoneImpl>>() {
         });
-    return groups.stream().map(g -> (HumanBone) g).toList();
+    return groups.stream().map(g -> (HumanBone) g).collect(Collectors.toList());
   }
 }
